syntax = "proto3";
package model;
option java_package = "com.tickers.io.protobuf";
option java_outer_classname = "TickersProto";

message TypeResponse {
  string label = 1;
  string value = 2;
}

message TypesResponse {
  repeated TypeResponse content = 1;
}